# alkalimatrix

./: Cargo.toml
src/: client.rs  error.rs  lib.rs  main.rs  transport.rs
src/model/: common.rs  location.rs  mod.rs  response.rs  routing.rs  search.rs  summarize.rs
tests/: integration.rs
